Fixed spacing

--- a/ui/src/style/device.css
+++ b/ui/src/style/device.css
@@ -380,8 +380,7 @@
     position: absolute;
     z-index: 1;
     height: 100%;
-    right: 16px;
-    left: 16px;
+    width: 100%;
 }
 .card .card-front.card-back-flip {
     animation: back-flip-1 1s linear 1 forwards;
@@ -422,8 +421,7 @@
     z-index: -1;
     transform: rotateY(-90deg);
     height: 100%;
-    right: 16px;
-    left: 16px;
+    width: 100%;
 }
 .card .card-back.card-back-flip {
     animation: back-flip-2 1s linear 1 forwards;
